add meta description keyword author link and title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<meta>
-<meta>
-<meta>
+<meta name="description" content="sci fi comics popular science fantasy and more">
+<meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
+<meta name="author" content="David Scanlon">
 <link rel="stylesheet" href="/assets/css/style.css">
 <title>The-Power-Cosmic</title>
 </head>
