--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-    <h1><The-Power-Cosmic></h1>
+    <nav class="nav">
+        <ul>
+            <li><a href="default.asp">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+          </ul>
+
+    </nav>
+    <h1 class="title">The Power Cosmic</h1>
     <header>
 
     </header>
