--- a/index.html
+++ b/index.html
@@ -10,19 +10,30 @@
 </head>
 
 <body>
+    <!--nav bar element assistance (https://www.w3schools.com/css/css_navbar.asp)-->
     <nav class="nav">
         <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
+            <li><a href="default.asp">Home</a></li>   
             <li><a href="contact.asp">Contact</a></li>
             <li><a href="about.asp">About</a></li>
+            <li><a href="about.asp">Gallery</a></li>
           </ul>
 
     </nav>
-    <h1 class="title">The Power Cosmic</h1>
-    <header>
+    
+    <!--Hero Image-->
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1 class="title">The Power Cosmic</h1>
+            <p>
+                This is a cosmic site
+            </p>
+            <button href="#">
+                button 
 
-    </header>
+            </button>
+        </div>
+    </div>
 
 
 </body>
