--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 <meta name="description" content="sci fi comics popular science fantasy and more">
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
-<meta name="author" content="David Scanlon">
+<meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="/assets/css/style.css">
 <title>The-Power-Cosmic</title>
 </head>
