add text under hero image needs to be styled

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             </button>
         </div>
     </div>
+    <section>
+    <div class="information">
+        <h2>Cosmic explorer</h2>
+        <p class="details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum necessitatibus commodi dolores veritatis ullam i
+            mpedit id blanditiis iste eligendi? Commodi maiores doloribus distinctio ducimus nam cumque labore sed, quod iste?</p>
+    </div>
+
+    </section>
 
 
 </body>
