added footer and social media icons and style sheet links to html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://use.fontawesome.com/9350add4f8.js"></script>
     <meta charset="UTF-8">
 <meta name="description" content="sci fi comics popular science fantasy and more">
 <meta name="keywords" content="scifi scyfy sci-fi science-fiction science fantasy comics marvel space dimensions">
 <meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 <link rel="stylesheet" href="/assets/css/style.css">
 <title>The-Power-Cosmic</title>
 </head>
@@ -43,7 +45,26 @@
 
     </section>
 
+    <footer>
+    <div>
+        <ul>
+            <li>
+                <i class="fab fa-instagram"></i>
+            </li>
 
+            <li>
+                <i class="fab fa-facebook"></i>
+            </li>
+            <li>
+
+                <i class="fab fa-twitter"></i>
+            </li>
+            <li>
+                <i class="fab fa-youtube"></i>
+            </li>
+        </ul>
+    </div>
+    </footer>
 </body>
 
 </html>
