add style to hero button and links to contact page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <p>
                 This is a cosmic site
             </p>
-            <button href="#">
-                button 
-
+            <button  class="hero-button"> <a href="contact.html" class="hero-link">
+                Contact Us 
+</a>
             </button>
         </div>
     </div>
