add animation using png ufo to css and html researched several points using youtube tutorials

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 </a>
             </button>
         </div>
+    <div class="ufo">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        <img src="images/ufo.png">
+        
+
+    </div>
+
+        </div>
     </div>
     <section>
     <div class="information">
